WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129533
Fix WebKit2 build after
r164890
https://bugs.webkit.org/show_bug.cgi?id=129533
Summary
Fix WebKit2 build after r164890
Jinwoo Song
Reported
2014-02-28 20:20:34 PST
LayerRepresentation.h is not used in non MAC or IOS port. [ 83%] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/DrawingAreaProxy.cpp.o In file included from /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/DrawingAreaProxy.cpp:31:0: /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebPageProxy.h:40:33: fatal error: LayerRepresentation.h: No such file or directory compilation terminated. In file included from /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebProcessProxy.h:37:0, from /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebContext.h:45, from /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/Shared/APIURLRequest.cpp:29: /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebPageProxy.h:40:33: fatal error: LayerRepresentation.h: No such file or directory compilation terminated. make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/DrawingAreaProxy.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/Shared/APIURLRequest.cpp.o] Error 1 make[1]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch
(1.48 KB, patch)
2014-02-28 20:24 PST
,
Jinwoo Song
no flags
Details
Formatted Diff
Diff
Patch
(1.47 KB, patch)
2014-02-28 20:48 PST
,
Jinwoo Song
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jinwoo Song
Comment 1
2014-02-28 20:24:06 PST
Created
attachment 225528
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-02-28 20:38:30 PST
Comment on
attachment 225528
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=225528&action=review
> Source/WebKit2/ChangeLog:9 > + but it is not used in non MAC or IOS port.
MAC -> Mac, IOS -> iOS
> Source/WebKit2/UIProcess/WebPageProxy.h:97 > +#if PLATFORM(MAC) || PLATFORM(IOS)
This should be #if PLATFORM(COCOA)
Jinwoo Song
Comment 3
2014-02-28 20:48:33 PST
Created
attachment 225532
[details]
Patch Applied Simon's comments.
WebKit Commit Bot
Comment 4
2014-02-28 21:28:49 PST
Comment on
attachment 225532
[details]
Patch Clearing flags on attachment: 225532 Committed
r164909
: <
http://trac.webkit.org/changeset/164909
>
WebKit Commit Bot
Comment 5
2014-02-28 21:28:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug