Fix WebKit2 build after r164890 https://bugs.webkit.org/show_bug.cgi?id=129533

Reviewed by Simon Fraser.

LayerRepresentation.h is included to WebPageProxy.h in r164890
but it is not used in non Mac or iOS port.

* UIProcess/WebPageProxy.h:


Canonical link: https://commits.webkit.org/147589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164909 268f45cc-cd09-0410-ab3c-d52691b4dbfc